assets/css/style.css
 
header {
  display: flex;
  flex-flow: row wrap;
  background-image: linear-gradient(15deg,#e1e3fa 0%, #0f1cce 100%);
  color: white;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: auto;
  text-shadow: 2px 2px 3px black;
} 
header img {
  height: 128px;
}
nav {
  background-image: linear-gradient(15deg, #0f1cce 0% , #e1e3fa 100% );
  z-index: 1;
}

main {
  padding-top: 50px;
  background-image: url('../images/UNC-Duke2.jpg');
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
}
.section-title {
  height: 100%;
  width: 100%;
  margin: 0;
  color: white;
  text-shadow: 1px 1px 2px black;
}
#teams {
  text-align: center;
}
#teams h3 {
  background-color: rgba(0,0,0,0.4);
}

.box img{
  width: 150px;
  height: auto;
  opacity: 0.5;
}
.box img:hover {
  transition: opacity 0.5s;
  opacity: 0.9;
}

/* Geocoding styling */
 html, body {
  width: 100%;
  height: 100%;
  margin: 0;
}
.map-main {
  display: none;
}
#game-container {
  height: 100%;
  width: 50%;
  overflow: hidden;
}
.game-list {
  display: block;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  color: white;
  text-shadow: 1px 2px 2px black;
  background-color: rgba(0,0,0,0.4);
  width: 80%;
  margin: 20px;
  
}
.game-dates {
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}
.game-dates:nth-of-type(1n+3){
  display: block;
}



/* #address {
  padding: 5px 10px;
  flex: 1;
  margin-right: 5px;
}

.results {
    padding: 10px;
    display: flex;
    flex-direction: column;
    min-width: 400px;
} */

.status {
    padding: 10px;
}

#my-map {
  padding: 150px;
  margin-top: 15px;
  height: 125px;
  width: 200px;
}

.controls {
  display: none;
}


section {
  height: 100%;
} 

